--- a/shelf/docs/TODO.txt
+++ b/shelf/docs/TODO.txt
@@ -2,13 +2,26 @@ TODO list for PreservationSimulation SHELF project
 
 
 TODO: shock
-TODO: add server default lifespan to param files.
-MAYBE: server default lifespan is random, not fixed, right?  just expo?
-MAYBE: add server default lifespan to main CLI and even broker.
-TODO: code shock methods for real not just pseudocode.
-TODO: test shock rescheduling server death.  
-TODO: server death after shock is after now, not absolute, right?
-TODO: select reasonable ranges of shock impacts.
+FIXME - add server default lifespan to param files and CLI, zero = infinite.
+DONE - server default lifespan is random, not fixed.  currently expo.
+MAYBE: add server default lifespan to main CLI and broker.
+FIXME - code shock methods for real not just pseudocode.  new style, at audit.
+FIXME - test shock rescheduling server death.  
+WRONG - server death after shock is after now, not absolute, right?
+FIXME - shock reduces server life by pct. shock duration finite.  after shock
+    expires, server life returns to normal if not already dead.  
+FIXME - select reasonable ranges of shock impacts.  
+FIXME - server death evaluated before every audit cycle and at end of run.  
+
+
+TODO: web interface to select instructions for broker run
+WRONG - learn kivy and remi, decide which to use.
+DONE - build static web interface to permit choosing instructions for 
+  a single run.
+FIXME - add server default halflife to web interface and CLI.
+FIXME - build static web interface to permit choosing subset instructions 
+    for group run by broker.
+FIXME - build backend for interface that generates broker.py command.
 
 
 TODO: extractvalues.py
@@ -159,13 +172,6 @@ FIXME - at some interval, economic glitch dramatically increases the
 FIXME - add external parameters to set number of servers affected,
   the decrease in institution lifetime, and the rate of economic
   recession/depression.  
-
-
-DEFER: web interface to select instructions for broker run
-FIXME - learn kivy and remi, decide which to use.
-FIXME - build static web interface to permit choosing instructions for 
-  a single run, or subset instructions for group run.
-FIXME - build backend for interface that generates broker.py command.
 
 
 DEFER: newnewinstructions
